tests/codegen/fail/scalar/type_alias/attr_invalid_url.stderr
error: Invalid URL: relative URL without a base
 --> fail/scalar/type_alias/attr_invalid_url.rs:7:24
  |
7 |     specified_by_url = "not an url",
  |                        ^^^^^^^^^^^^

error: cannot find attribute `graphql` in this scope
 --> fail/scalar/type_alias/attr_invalid_url.rs:6:3
  |
6 | #[graphql(
  |   ^^^^^^^
